# bitcoin-rollup-sim

./: index.html  main.py  main_utils.py  pyproject.toml
bitcoin_rollup_sim/: block.py  connection.py  consts.py  global_state.py  keys.py  node.py  peers.py  runnable.py  script.py  transaction.py  utils.py  validation.py
bitcoin_rollup_sim/utils/: block.py  common.py  node.py
tests/: test_block.py  test_keys.py  test_script.py
