[tool.poetry]
name = "bitcoin-rollup-sim"
version = "0.1.0"
description = ""
authors = ["Bibek Pandey <bewakepandey@gmail.com>"]
readme = "README.md"
packages = [{include = "bitcoin_rollup_sim"}]

[tool.poetry.dependencies]
python = "^3.10"
fastecdsa = "^2.3.0"
base58 = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
