[tool.poetry]
name = "bitcoin-rollup-sim"
version = "0.1.0"
description = ""
authors = ["Bibek Pandey <bewakepandey@gmail.com>"]
readme = "README.md"
packages = [{include = "bitcoin_rollup_sim"}]

[tool.poetry.dependencies]
python = "^3.10"
fastecdsa = "^2.3.0"
fastapi = "^0.100.1"
base58 = "^2.1.1"
pytest = "^7.4.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
